[package]
name = "vulkanox"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vulkano = "0.34.1"
vulkano-shaders = {version ="0.34.0" }
winit = { version = "0.29.3" , features = ["rwh_05"]}
palette = {version = "0.7.6"}
gltf = "1.4.1"
nalgebra = "0.33.2"
bytemuck = "1.21.0"